--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "multer": "^1.4.5-lts.1",
     "music-metadata": "^7.14.0",
     "otplib": "^12.0.1",
-    "react-dotenv": "^0.1.3"
+    "react-dotenv": "^0.1.3",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "eslint": "^8.53.0",
